2012-10-?? Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.5.8
	* Version 1.5.8 released

2012-10-23 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Fldstat: set weight to 1 if gridsize is Fldstat: set weight to 1 if gridsize is1 1

2012-10-19 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* added operator seinfo

2012-10-17 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* eca_rr1: result has wrong long name attribute [Bug #2763]
	* eca_pd: disabled, use eca_rr1  (same functionallity) [Bug #2763]

2012-10-14 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* added operator tee

2012-10-13 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remaplaf: fixed bug in binary_search_int()

2012-10-05 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* use read/write timer only for single threaded CDO version [Support #2854]

2012-10-05 Modali Kameswarrao  <modali.kameswarrao@zmaw.de>

	* Maggraph update

2012-09-25 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* replace: change streamNtsteps() to vlistNtsteps() (bug fix for CDI 1.5.7)

2012-09-13 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Added support for netCDF4(HDF5) formatted SCRIP grids

2012-09-07 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Info: changed output format
	* Diff: changed output format

2012-09-04 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* processDelete: set Process[processID].threadID = 0 (bug fix)

2012-09-03 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* added CDO option -L to lock all I/O calls. This option is neccessary if external I/O libraries like 
	  netCDF4 (HDF5) were installed without thread-safe support.

2012-08-30 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Sinfo: changed output format

2012-08-28 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.5.7 (merged from cdi-pio)
	* activate pstreamCopyRecord()
	* Version 1.5.7 released

2012-08-23 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Arith: bug fix for NVARS1 == NVARS2